--- a/FTWeb/ViewV5/AppPage/KCGL/KCGL.html
+++ b/FTWeb/ViewV5/AppPage/KCGL/KCGL.html
@@ -53,7 +53,7 @@
                 <li class="add-item add-width  fl-left">
                     <label class="add-item-label"><i>*</i>培训课时(小时)</label>
                     <div class="add-ic">
-                        <input type="text" class="form-control szhl_require" ms-duplex="modelData.KSS" />
+                        <input type="text" class="form-control szhl_require szhl_Int" ms-duplex="modelData.KSS" />
                     </div>
                 </li>
                 <li class="add-item add-width fl-right">
