--- a/FTWeb/ViewV5/index.html
+++ b/FTWeb/ViewV5/index.html
@@ -23,8 +23,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('/ViewV5/images/skin/skin1.png');
-    background-color: transparent;" ms-controller="IndexV5">
+<body style="background:url('/ViewV5/images/skin/skin1.png');background-attachment:fixed;background-position:bottom" ms-controller="IndexV5">
     <div class="worker mb20" >
         <div class="header box-shadow">
             <div class="head-center clearfix">
