修复手机端出现超时的逻辑 修复个人中心修改无法生效的问题

--- a/FTWeb/View_Mobile/UI/UI_COMMON.html
+++ b/FTWeb/View_Mobile/UI/UI_COMMON.html
@@ -19,14 +19,12 @@
         var corpId = ComFunJS.getQueryString("corpId");
 
         $(function () {
-
             if (ComFunJS.getCookie("szhlcode") && ComFunJS.getCookie("wxusername")) {  //缓存的用户名，直接跳到对应的地址
                 $.getJSON("/API/WXAPI.ashx?action=isexist&r=" + Math.random(), { "corpid": corpId }, function (r) {
                     if (r.ErrorMsg == "") {
                         getRURL(funcode);
                     }
                     else {
-
                         ComFunJS.delCookie("szhlcode");
                         ComFunJS.delCookie("wxusername");
                         hqsq();
@@ -103,7 +101,7 @@
                         window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!");
                     }
                 } else {
-                    alert(r.ErrorMsg);
+                    alert("wx"+r.ErrorMsg);
                 }
 
             })
