修复修改密码无效得问题

--- a/FTWeb/ViewV5/AppPage/XTGL/YGGL.html
+++ b/FTWeb/ViewV5/AppPage/XTGL/YGGL.html
@@ -128,7 +128,7 @@
                             <input type="text" class="form-control" ms-duplex="UserData.zhiwu" id="zhiwu" placeholder="请输入用户默认职务" />
                         </div>
                     </li>
-                    <li class="add-item add-width fl-left">
+                    <li class="add-item add-width fl-left" ms-if="userName==''">
                         <label class="add-item-label"><i>*</i>用户密码</label>
                         <div class="add-ic">
                             <input type="password" class="form-control" autocomplete="off" ms-duplex="UserData.UserPass" placeholder="请输入用户密码" />
