--- a/FTWeb/View_Mobile/UI/UI_COMMON.html
+++ b/FTWeb/View_Mobile/UI/UI_COMMON.html
@@ -46,7 +46,7 @@
                         ComFunJS.setCookie("wxusername", r.Result1, 7);
                         getRURL(funcode);
                     } else {
-                        window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!");
+                        window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!!!");
                     }
 
                 })
@@ -98,7 +98,7 @@
                         window.location.replace(url);
                     }
                     else {
-                        window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!");
+                        window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!!");
                     }
                 } else {
                     alert("wx"+r.ErrorMsg);
