--- a/FTWeb/ViewV5/AppPage/QYWD/QYWDGL.html
+++ b/FTWeb/ViewV5/AppPage/QYWD/QYWDGL.html
@@ -49,6 +49,7 @@
         cursor:zoom-in;
     }
 </style>
+<script src="/ViewV5/JS/timego.js"></script>
 
 <div ms-controller="APP_QYWDM">
     <div class="padding20">
