--- a/FTWeb/ViewV5/AppPage/QYWD/QYWD.html
+++ b/FTWeb/ViewV5/AppPage/QYWD/QYWD.html
@@ -48,6 +48,7 @@
         cursor:zoom-in;
     }
 </style>
+<script src="/ViewV5/JS/timego.js"></script>
 
 <div ms-controller="APP_QYWD">
     <div class="padding20">
