--- a/FTWeb/View_Mobile/UI/UI_QYHD_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_QYHD_LIST.html
@@ -355,10 +355,15 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script> 
-    <script src="/View_Mobile/JS/avalon1.47.js"></script>
+    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
+        ComFunJS.delCookie("szhlcode")
+        if (ComFunJS.getCookie("szhlcode") == null) {
+            ComFunJS.setCookie("szhlcode", "YxOHxwYFIMrVlTNRK9pSYa3U_R15QUs4iqU3rlSqzwlh1sneHnEJr4OjL9GSXlnC28AByiI8VPwQsrjxSvKGTw", 7);
+            ComFunJS.setCookie("wxusername", "13949029503", 7);
+        }
         var model = avalon.define({
             $id: "UI_QYHD_LIST",
             ctData: [],//数据源
