--- a/FTWeb/ViewV5/AppPage/XXFB/XXFBChildrenVIEw.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/XXFBChildrenVIEw.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1467447454_1909795.css">
     <link href="/ViewV5/CSS/BaseClassV3.css" rel="stylesheet" />
     <script src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
+    <script src="/ViewV5/JS/layer/layer.js"></script>
     <script src="/ViewV5/JS/avalon1.47.js"></script>
     <style>
         body {
