--- a/FTWeb/ViewV5/AppPage/XTGL/APPSET.html
+++ b/FTWeb/ViewV5/AppPage/XTGL/APPSET.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="detail-item" ms-if="ModelData.AppType=='2'">
                         <span class="item-tit">主页URL</span>
-                        <div class="item-con">http://oa.fullteemzz.com/View_Mobile/UI/UI_COMMON.html?funcode=RLZY&corpId=wxfff8812948a1b686</div>
+                        <div class="item-con">http://服务器域名/View_Mobile/UI/UI_COMMON.html?funcode=RLZY&corpId=??</div>
                     </div>
                     <div class="detail-item">
                         <span class="item-tit">企业号应用</span>
