--- a/FTWeb/View_Mobile/UI/UI_LCSP_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_LCSP_LIST.html
@@ -105,7 +105,7 @@
                                     <a class="tab-link button external" ms-click="vieww(el)" ms-if="(type=='2' || DataID!=-1) &&el.StateName=='正在审批'">
                                         <i class="iconfont icon-shenpi"></i>审核
                                     </a>
-                                    <a class="tab-link button external" ms-click="vieww(el)" ms-if="type!='2' && el.CRUser==nowuser">
+                                    <a class="tab-link button external" ms-click="vieww(el)" ms-if="type!='2'">
                                         <i class="iconfont icon-view"></i>查看
                                     </a>
                                 </div>
