--- a/FTWeb/ViewV5/AppPage/APPVIEW.html
+++ b/FTWeb/ViewV5/AppPage/APPVIEW.html
@@ -232,7 +232,7 @@
                     var lcspTaskData = [];
                     var lcspTask = { title: "", content: "" }
                     var lcspTaskm = { title: "", content: "", Date: "" };//手机流程数据
-                    var array = ["第一步", "第二步", "第三步", "第四步", "第五步", "第六步", "第七步", "第八步"];
+                    var array = ["第一步", "第二步", "第三步", "第四步", "第五步", "第六步", "第七步", "第八步", "第九步", "第十步", "第十一步"];
                     var stepCount = 0;
                     $(model.TASKDATA).each(function (i, item) {
                         var reason = "";
