--- a/FTWeb/ViewV5/AppPage/APP_ADD_WF.html
+++ b/FTWeb/ViewV5/AppPage/APP_ADD_WF.html
@@ -25,7 +25,7 @@
     <script src="/ViewV5/JS/avalon1.47.js"></script>
     <script src="/ViewV5/CSS/bootstrap3.3.5/js/bootstrap.js"></script>
     <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160925"></script>
-    <script src="/ViewV5/JS/WFJS.js"></script>
+    <script src="/ViewV5/JS/WFJS.js?ver=20170326"></script>
     <script src="/ViewV5/JS/YSteps/Steps.js"></script>
 
 
