--- a/FTWeb/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/FTWeb/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -392,7 +392,7 @@
     <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160730"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
-    <script src="/ViewV5/JS/WFJS.js"></script>
+    <script src="/ViewV5/JS/WFJS.js?ver=20170326"></script>
     <!--<script src="http://api.map.baidu.com/api?v=2.0&ak=tX20rXYlZWqdEcYIdkOWnmTR1jHlmjT5" type="text/javascript"></script>-->
     <script language="javascript" src="http://webapi.amap.com/maps?v=1.3&key=00fe526c7af6452674306b68a5cc8590"></script>
     <script>
