修改下载文件bug

--- a/FTWeb/View_Mobile/UI/UI_LCSP_LIST.html
+++ b/FTWeb/View_Mobile/UI/UI_LCSP_LIST.html
@@ -279,6 +279,7 @@
                         window.location = file.YLUrl;
                         return;
                     }
+                    window.location = "/ViewV5/Base/DownFile.aspx?MD5=" + file.FileMD5;
                 },//文件查看方法
                 getdata: function (type) {
                     $.attachInfiniteScroll($('.infinite-scroll'))
