继续完善工作流程

--- a/FTWeb/ViewV5/AppPage/LCSP/LCSP.html
+++ b/FTWeb/ViewV5/AppPage/LCSP/LCSP.html
@@ -5,7 +5,7 @@
             <!--<div class="fg-item"><span>基本信息</span></div>-->
             <ul class="clearfix" style="display: block; padding: 0">
                 <li class="add-item add-widthall ">
-                    <label class="add-item-label" style="margin-right:10px;">流程类别</label>
+                    <label class="add-item-label" style="margin-right:10px;">流程名称</label>
                     <span class="add-ic">
                         {{LeiBieText}}
                     </span>
